# fastapi-langchain-docker

./: .gitignore  Dockerfile  README.md  compose.yml  my_learnings.md
backrooms/: Dockerfile  README.md  pyproject.toml
backrooms/src/: main.py
backrooms/src/config/: load_env.py
statics/: static.Dockerfile
statics/src/: index.html  yo.html
